# email-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  pyproject.toml
email_assistant/: __main__.py  cli.py  composio_api.py  config.py  fetcher.py  gmail_auth.py  processor.py  prompts.py  provider.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ConfigView.tsx  EmailCard.tsx  InboxView.tsx  Navbar.tsx  SetupView.tsx
server/: main.py  requirements.txt
